meta-bsp/conf/layer.conf: Install firmware for all supported NXP Wi-Fi modules [YOCIMX-7166]
As NXP provides all-in-one Wi-Fi kernel driver already, it is reasonable to install
all of firmware for supported NXP Wi-Fi modules to rootfs.

It can benefit the end user to replace NXP Wi-Fi module without re-build rootfs.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -116,6 +116,9 @@ MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'n
 MACHINE_FIRMWARE:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw612-sdio', 'firmware-nxp-wifi-nxpiw612-sdio', '', d)}"
 MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw612-sdio', 'nxp-wlan-sdk kernel-module-nxp-wlan', '', d)}"
 
+# Install all of NXP Wi-Fi firmware to rootfs to benefit plug-and-play for M.2 modules
+MACHINE_FEATURES:append:use-nxp-bsp = " nxp8801-sdio nxp8987-sdio nxp8997-pcie nxp8997-sdio nxp9098-pcie nxp9098-sdio nxpiw416-sdio nxpiw612-sdio"
+
 # MCore Demo apps to /lib/firmware
 MACHINE_EXTRA_RRECOMMENDS:append:mx7ulp-nxp-bsp  = " imx-m4-demos"
 MACHINE_EXTRA_RRECOMMENDS:append:mx8mm-nxp-bsp   = " imx-m4-demos"
