imx91p-9x9-lpddr4-qsb.conf: Add SPI NAND boot image for imx91 Phantom [YOCIMX-7182]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
+++ b/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
@@ -22,6 +22,12 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
 
 UBOOT_CONFIG_BASENAME = "imx91p_9x9_qsb"
 
+UBOOT_CONFIG[spinand]   = "${UBOOT_CONFIG_BASENAME}_spinand_defconfig"
+
+IMXBOOT_TARGETS_NAND = "flash_singleboot_spinand flash_singleboot_spinand_fw"
+
+IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG','spinand', '${IMXBOOT_TARGETS_NAND}', 'flash_singleboot', d)}"
+
 DDR_FIRMWARE_NAME = " \
     lpddr4_dmem_1d_v202201.bin \
     lpddr4_dmem_2d_v202201.bin \
