layer.conf: Update i.MX93 demo images [YOCIMX-7091]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -433,6 +433,7 @@ MACHINE_FIRMWARE:append:imx93-9x9-lpddr4-qsb = " ethos-u-firmware"
 WKS_FILE_DEPENDS:append:imx93-9x9-lpddr4-qsb = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
     imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
+    imx93-9x9-qsb_m33_TCM_low_power_wakeword.bin \
     imx93-9x9-qsb_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
     imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
 "
@@ -459,6 +460,9 @@ MACHINE_FEATURES:append:imx93-14x14-lpddr4x-evk = " dpdk nxpiw612-sdio"
 MACHINE_FIRMWARE:append:imx93-14x14-lpddr4x-evk = " ethos-u-firmware"
 WKS_FILE_DEPENDS:append:imx93-14x14-lpddr4x-evk = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-14x14-lpddr4x-evk = " \
+    imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
+    imx93-14x14-evk_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93-14x14-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
 "
 
 # Create a mirror for unreliable packages
