conf/layer.conf: Update i.MX8ULP demo images [YOCIMX-7195]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -419,6 +419,9 @@ MACHINE_FEATURES:remove:imx8ulp-lpddr4-evk = " soc-reva1"
 IMXBOOT_TARGETS_SD:imx8ulp-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
 IMXBOOT_TARGETS_FSPI:imx8ulp-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-lpddr4-evk   = "flash_singleboot_m33"
+IMAGE_BOOT_FILES:append:imx8ulp-lpddr4-evk = " \
+    imx8ulp_m33_TCM_low_power_display.bin \
+"
 
 # Overrides for imx8ulp-9x9-lpddr4-evk.conf
 MACHINE_FEATURES:append:imx8ulp-9x9-lpddr4-evk = " soc-reva2 nxpiw416-sdio"
@@ -426,6 +429,9 @@ MACHINE_FEATURES:remove:imx8ulp-9x9-lpddr4-evk = " soc-reva1"
 IMXBOOT_TARGETS_SD:imx8ulp-9x9-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
 IMXBOOT_TARGETS_FSPI:imx8ulp-9x9-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-9x9-lpddr4-evk   = "flash_singleboot_m33"
+IMAGE_BOOT_FILES:append:imx8ulp-9x9-lpddr4-evk = " \
+    imx8ulp_m33_TCM_low_power_display.bin \
+"
 
 # Overrides for imx93-9x9-lpddr4-qsb.conf
 MACHINE_FEATURES:append:imx93-9x9-lpddr4-qsb = " dpdk nxpiw612-sdio"
