Add two new dtb files for imx91p ld mode support [YOCIMX-7193]
imx91p-9x9-lpddr4-qsb.conf
imx91p-11x11-lpddr4-evk.conf
imx91pevk.conf
imx8_all.conf

Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
+++ b/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
@@ -14,6 +14,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-aud-hat.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-flexspi-m2.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-i3c.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-imx91p-9x9-qsb-ld.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi-slave.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-mt9m114.dtb \
