--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -305,12 +305,14 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
 # DEVICETREE of i.MX 91p
 KERNEL_DEVICETREE += "freescale/imx91p-11x11-evk.dtb \
                       freescale/imx91p-11x11-evk-aud-hat.dtb \
+                      freescale/imx91p-11x11-evk-ld.dtb \
                       freescale/imx91p-11x11-evk-mqs.dtb \
                       freescale/imx91p-11x11-evk-mt9m114.dtb \
                       freescale/imx91p-11x11-evk-ontat-wvga-panel.dtb \
                       freescale/imx91p-9x9-qsb-aud-hat.dtb \
                       freescale/imx91p-9x9-qsb-flexspi-m2.dtb \
                       freescale/imx91p-9x9-qsb-i3c.dtb \
+                      freescale/imx91p-9x9-qsb-ld.dtb \
                       freescale/imx91p-9x9-qsb-lpspi-slave.dtb \
                       freescale/imx91p-9x9-qsb-lpspi.dtb \
                       freescale/imx91p-9x9-qsb-mt9m114.dtb \
