Add two imx93 dtb files [YOCIMX-7192]
imx93evk.conf
imx8_all.conf
layer.conf

Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -436,6 +436,10 @@ IMAGE_BOOT_FILES:append:imx8ulp-9x9-lpddr4-evk = " \
 # Overrides for imx93-9x9-lpddr4-qsb.conf
 MACHINE_FEATURES:append:imx93-9x9-lpddr4-qsb = " dpdk nxpiw612-sdio"
 MACHINE_FIRMWARE:append:imx93-9x9-lpddr4-qsb = " ethos-u-firmware"
+KERNEL_DEVICETREE:append:imx93-9x9-lpddr4-qsb = " \
+    freescale/imx93-9x9-qsb-rpmsg.dtb \
+    freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
+"
 WKS_FILE_DEPENDS:append:imx93-9x9-lpddr4-qsb = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
     imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
