--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -300,6 +300,8 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-9x9-qsb-lpspi-slave.dtb \
                       freescale/imx93-9x9-qsb-mt9m114.dtb \
                       freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
+                      freescale/imx93-9x9-qsb-rpmsg.dtb \
+                      freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
 "
 
 # DEVICETREE of i.MX 91p
