--- a/meta-bsp/conf/machine/imx93evk.conf
+++ b/meta-bsp/conf/machine/imx93evk.conf
@@ -26,4 +26,6 @@ KERNEL_DEVICETREE += " \
         freescale/imx93-9x9-qsb-lpspi-slave.dtb \
         freescale/imx93-9x9-qsb-mt9m114.dtb \
         freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
+        freescale/imx93-9x9-qsb-rpmsg.dtb \
+        freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
 "
