Add more dtb support for MX91 Phantom [YOCIMX-7199]
imx91p-11x11-lpddr4-evk.conf
imx8_all.conf

Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -307,10 +307,15 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
 # DEVICETREE of i.MX 91p
 KERNEL_DEVICETREE += "freescale/imx91p-11x11-evk.dtb \
                       freescale/imx91p-11x11-evk-aud-hat.dtb \
+                      freescale/imx91p-11x11-evk-flexspi-m2.dtb: \
+                      freescale/imx91p-11x11-evk-i3c.dtb \
                       freescale/imx91p-11x11-evk-ld.dtb \
+                      freescale/imx91p-11x11-evk-lpspi.dtb \
+                      freescale/imx91p-11x11-evk-lpspi-slave.dtb \
                       freescale/imx91p-11x11-evk-mqs.dtb \
                       freescale/imx91p-11x11-evk-mt9m114.dtb \
                       freescale/imx91p-11x11-evk-ontat-wvga-panel.dtb \
+                      freescale/imx91p-9x9-qsb.dtb \
                       freescale/imx91p-9x9-qsb-aud-hat.dtb \
                       freescale/imx91p-9x9-qsb-flexspi-m2.dtb \
                       freescale/imx91p-9x9-qsb-i3c.dtb \
