Add imx8mp-evk-sof-pdm.dtb file to Yocto image [YOCIMX-7198]
imx8mp-lpddr4-ndm.conf
imx8mpul-lpddr4-evk.conf
layer.conf
imx8_all.conf

Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -343,6 +343,7 @@ KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
     freescale/imx8mp-evk-revb4-usdhc1-m2.dtb \
     freescale/imx8mp-evk-revb4-8mic-swpdm.dtb \
     freescale/imx8mp-evk-revb4-8mic-revE.dtb \
+    freescale/imx8mp-evk-sof-pdm.dtb \
 "
 WKS_FILE_DEPENDS:append:imx8mp-lpddr4-evk = " imx-m7-demos"
 IMAGE_BOOT_FILES:append:imx8mp-lpddr4-evk = " \
