--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -158,6 +158,7 @@ KERNEL_DEVICETREE += " \
                      freescale/imx8mp-evk-revb4-usdhc1-m2.dtb \
                      freescale/imx8mp-evk-revb4-8mic-swpdm.dtb \
                      freescale/imx8mp-evk-revb4-8mic-revE.dtb \
+                     freescale/imx8mp-evk-sof-pdm.dtb \
 "
 
 # DEVICETREE of i.MX 8QM
