--- a/meta-bsp/conf/machine/imx8mp-lpddr4-ndm.conf
+++ b/meta-bsp/conf/machine/imx8mp-lpddr4-ndm.conf
@@ -10,6 +10,7 @@ require conf/machine/include/imx8mp-evk.inc
 KERNEL_DEVICETREE_BASENAME = "imx8mp-evk"
 KERNEL_DEVICETREE = " \
                      freescale/${KERNEL_DEVICETREE_BASENAME}-ndm.dtb \
+                     freescale/${KERNEL_DEVICETREE_BASENAME}-sof-pdm.dtb \
 "
 
 UBOOT_CONFIG_BASENAME = "imx8mp_evk_ndm"
