imx8_all.conf: Fix KERNEL_DEVICETREE typo [YOCIMX-7199]
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -307,7 +307,7 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
 # DEVICETREE of i.MX 91p
 KERNEL_DEVICETREE += "freescale/imx91p-11x11-evk.dtb \
                       freescale/imx91p-11x11-evk-aud-hat.dtb \
-                      freescale/imx91p-11x11-evk-flexspi-m2.dtb: \
+                      freescale/imx91p-11x11-evk-flexspi-m2.dtb \
                       freescale/imx91p-11x11-evk-i3c.dtb \
                       freescale/imx91p-11x11-evk-ld.dtb \
                       freescale/imx91p-11x11-evk-lpspi.dtb \
