--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -324,6 +324,7 @@ KERNEL_DEVICETREE += "freescale/imx91p-11x11-evk.dtb \
                       freescale/imx91p-9x9-qsb-lpspi-slave.dtb \
                       freescale/imx91p-9x9-qsb-lpspi.dtb \
                       freescale/imx91p-9x9-qsb-mt9m114.dtb \
+                      freescale/imx91p-9x9-qsb-ontat-wvga-panel.dtb \
                       freescale/imx91p-9x9-qsb-spi-nand-m2.dtb \
 "
 
