--- a/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
+++ b/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
@@ -18,6 +18,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi-slave.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-mt9m114.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-ontat-wvga-panel.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-spi-nand-m2.dtb \
 "
 
