imx93evk.conf: Include demo packages for other boards
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/machine/imx93evk.conf
+++ b/meta-bsp/conf/machine/imx93evk.conf
@@ -29,3 +29,13 @@ KERNEL_DEVICETREE += " \
         freescale/imx93-9x9-qsb-rpmsg.dtb \
         freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
 "
+# Include M33 demo apps of other boards
+IMAGE_BOOT_FILES:append = " \
+    imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
+    imx93-14x14-evk_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93-14x14-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+    imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
+    imx93-9x9-qsb_m33_TCM_low_power_wakeword.bin \
+    imx93-9x9-qsb_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+"
