--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -318,6 +318,7 @@ KERNEL_DEVICETREE += "freescale/imx91p-11x11-evk.dtb \
                       freescale/imx91p-11x11-evk-ontat-wvga-panel.dtb \
                       freescale/imx91p-9x9-qsb.dtb \
                       freescale/imx91p-9x9-qsb-aud-hat.dtb \
+                      freescale/imx91p-9x9-qsb-can1.dtb \
                       freescale/imx91p-9x9-qsb-flexspi-m2.dtb \
                       freescale/imx91p-9x9-qsb-i3c.dtb \
                       freescale/imx91p-9x9-qsb-ld.dtb \
