--- a/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
+++ b/meta-bsp/conf/machine/imx91p-9x9-lpddr4-qsb.conf
@@ -12,6 +12,7 @@ KERNEL_DEVICETREE_BASENAME = "imx91p-9x9-qsb"
 
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-aud-hat.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-can1.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-flexspi-m2.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-i3c.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-ld.dtb \
