imx91pevk.conf: Add 4 missing dtb files [LF-9807]
Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-bsp/conf/machine/imx91pevk.conf
+++ b/meta-bsp/conf/machine/imx91pevk.conf
@@ -11,7 +11,11 @@ require conf/machine/imx91p-9x9-lpddr4-qsb.conf
 KERNEL_DEVICETREE += " \
         freescale/imx91p-11x11-evk.dtb \
         freescale/imx91p-11x11-evk-aud-hat.dtb \
+        freescale/imx91p-11x11-evk-flexspi-m2.dtb \
+        freescale/imx91p-11x11-evk-i3c.dtb \
         freescale/imx91p-11x11-evk-ld.dtb \
+        freescale/imx91p-11x11-evk-lpspi.dtb \
+        freescale/imx91p-11x11-evk-lpspi-slave.dtb \
         freescale/imx91p-11x11-evk-mqs.dtb \
         freescale/imx91p-11x11-evk-mt9m114.dtb \
 		freescale/imx91p-11x11-evk-ontat-wvga-panel.dtb \
