imx93-14x14-lpddr4x-evk.conf: Drop upstreamed file
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -463,6 +463,12 @@ IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
 # Overrides for imx93-14x14-lpddr4x-evk.conf
 MACHINE_FEATURES:append:imx93-14x14-lpddr4x-evk = " dpdk nxpiw612-sdio"
 MACHINE_FIRMWARE:append:imx93-14x14-lpddr4x-evk = " ethos-u-firmware"
+KERNEL_DEVICETREE:remove:imx93-14x14-lpddr4x-evk = " \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-lvds-it6263.dtb \
+"
+KERNEL_DEVICETREE:append:imx93-14x14-lpddr4x-evk = " \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-flexspi-m2.dtb \
+"
 WKS_FILE_DEPENDS:append:imx93-14x14-lpddr4x-evk = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-14x14-lpddr4x-evk = " \
     imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
