Fix Yocto syntax error of i.MX 8M AB2 boards [YOCIMX-7250]
As syntax change in YP, the syntax _ is repaced as :.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx8mm-ddr4-ab2.conf
+++ b/meta-bsp/conf/machine/imx8mm-ddr4-ab2.conf
@@ -7,7 +7,7 @@
 require include/imx8mm-ab2.inc
 
 KERNEL_DEVICETREE_BASENAME = "${MACHINE}"
-KERNEL_DEVICETREE:append_use-nxp-bsp = " \
+KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/imx8mm-ddr4-ab2-m4.dtb \
     freescale/imx8mm-ddr4-ab2-revb.dtb \
     freescale/imx8mm-ddr4-ab2-m4-revb.dtb \
