--- a/meta-bsp/conf/machine/imx8mq-wevk.conf
+++ b/meta-bsp/conf/machine/imx8mq-wevk.conf
@@ -6,3 +6,6 @@
 
 MACHINEOVERRIDES =. "imx8mq-evk:"
 require conf/machine/imx8mq-evk.conf
+
+# Set imx-mkimage boot target
+IMXBOOT_TARGETS = "flash_evk flash_evk_no_hdmi"
