imx8mq-lpddr4-wevk.conf: Add Memory type in machine name [YOCIMX-7244]
- Rename it from imx8mq-wevk.conf, which is not follow new machine naming rule;

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx8mq-lpddr4-wevk.conf
+++ b/meta-bsp/conf/machine/imx8mq-lpddr4-wevk.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
-#@NAME: NXP i.MX 8M Quad WEVK
+#@NAME: NXP i.MX 8M Quad LPDDR4 WEVK
 #@SOC: i.MX8MQ
-#@DESCRIPTION: Machine configuration for NXP i.MX 8M Quad Evaluation Kit with NXP Wi-Fi
+#@DESCRIPTION: Machine configuration for NXP i.MX 8M Quad LPDDR4 EVK with NXP Wi-Fi
 #@MAINTAINER: Jun Zhu <junzhu@nxp.com>
 
 MACHINEOVERRIDES =. "imx8mq-evk:"
