meta-imx: add necessary dependent layer for fsl-sdk-release
When parsing yocto project with command "bitbake -p", there is below
error reported:
layers/meta-imx/meta-sdk/recipes-graphics/libgpuperfcnt/
libgpuperfcnt_6.4.11.p1.2.bb:23: Could not inherit file
classes/fsl-eula-unpack2.bbclass
Because the necessary dependent layers of fsl-sdk-release are not
downloaded when setting up project, add them to avoid building
issue.

Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/meta-sdk/conf/layer.conf
+++ b/meta-sdk/conf/layer.conf
@@ -10,6 +10,8 @@ BBFILE_PATTERN_fsl-sdk-release := "^${LAYERDIR}/"
 BBFILE_PRIORITY_fsl-sdk-release = "8"
 LAYERSERIES_COMPAT_fsl-sdk-release = "mickledore"
 
+LAYERDEPENDS_fsl-sdk-release = "core fsl-bsp-release"
+
 BBFILES_DYNAMIC += " \
     chromium-browser-layer:${LAYERDIR}/dynamic-layers/chromium-browser-layer/*/*/*.bb \
     chromium-browser-layer:${LAYERDIR}/dynamic-layers/chromium-browser-layer/*/*/*.bbappend \
