meta-imx: add necessary dependent layer for fsl-sdk-release
When parsing yocto project with command "bitbake -p", there is below
error reported:
layers/meta-imx/meta-sdk/conf/distro/include/fsl-imx-base.inc:1:
Could not include required file conf/distro/poky.conf
Because the necessary dependent layer of fsl-sdk-release is not
downloaded when setting up project, add it to avoid building
issue.

Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/meta-sdk/conf/layer.conf
+++ b/meta-sdk/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PATTERN_fsl-sdk-release := "^${LAYERDIR}/"
 BBFILE_PRIORITY_fsl-sdk-release = "8"
 LAYERSERIES_COMPAT_fsl-sdk-release = "mickledore"
 
-LAYERDEPENDS_fsl-sdk-release = "core fsl-bsp-release"
+LAYERDEPENDS_fsl-sdk-release = "core fsl-bsp-release yocto"
 
 BBFILES_DYNAMIC += " \
     chromium-browser-layer:${LAYERDIR}/dynamic-layers/chromium-browser-layer/*/*/*.bb \
