--- a/meta-ml/conf/layer.conf
+++ b/meta-ml/conf/layer.conf
@@ -8,4 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-ml"
 BBFILE_PATTERN_meta-ml := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-ml = "8"
+LAYERDEPENDS_meta-ml = "core freescale-layer"
 LAYERSERIES_COMPAT_meta-ml = "mickledore"
