--- a/meta-bsp/conf/machine/imx8mq-lpddr4-wevk.conf
+++ b/meta-bsp/conf/machine/imx8mq-lpddr4-wevk.conf
@@ -7,5 +7,8 @@
 MACHINEOVERRIDES =. "imx8mq-evk:"
 require conf/machine/imx8mq-evk.conf
 
+UBOOT_CONFIG ??= "sd"
+UBOOT_CONFIG[sd] = "imx8mq_wevk_config,sdcard"
+
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk flash_evk_no_hdmi"
